converted left column and content divs to bootstrap 3 styles and fixed stretchy gap between the two columns. Change shows up if you use the new index, otherwise the new styles do not take effect.

--- a/css/css/mlearningstyle.css
+++ b/css/css/mlearningstyle.css
@@ -26,12 +26,10 @@ body{
 		position:relative;
 	}
 	
-div.container-fluid-full {
-	    /* width:100%;
-		height:100%;	
-		display:table; */
-	}
-	
+ 
+div.container-fluid#main {
+		padding-left:0px !important;
+}	
 	
 div#leftColumn{
 		display:inline-block;
@@ -39,11 +37,16 @@ div#leftColumn{
 		width:15%;
 		height:100%;
 		overflow:visible;
-		position:relative;
-		
+		position:relative;	
 	}
 	/*http://stackoverflow.com/a/14162373*/
 
+div#leftColumn.col-md-4 {
+	padding-left:0px !important;
+	position:relative;
+	padding-bottom:30em;
+	margin-bottom:-30em; 
+}
 div#main{ min-height: 100%; }
 
 div#sidebar-left.span3{
